--- a/main_HMM_homophonic.ipynb
+++ b/main_HMM_homophonic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,23 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': ['j'], 'b': ['a', 3], 'c': ['c'], 'd': ['t', 6], 'e': ['n'], 'f': ['h'], 'g': ['m', 9], 'h': ['s', 5], 'i': ['i'], 'j': ['f', 0], 'k': ['p'], 'l': ['l', 2], 'm': ['z'], 'n': ['v'], 'o': ['k', 1], 'p': ['u'], 'q': ['g'], 'r': ['r'], 's': ['e'], 't': ['b', 8], 'u': ['d', 4], 'v': ['o'], 'w': ['w'], 'x': ['x'], 'y': ['y', 7], 'z': ['q']}\n"
+      "{'a': ['c'], 'b': ['a', 5], 'c': ['x'], 'd': ['y', 1], 'e': ['r'], 'f': ['q'], 'g': ['g', 4], 'h': ['j'], 'i': ['s', 9], 'j': ['m', 7], 'k': ['b'], 'l': ['k'], 'm': ['w', 6], 'n': ['v'], 'o': ['t'], 'p': ['z', 0], 'q': ['d', 8], 'r': ['i'], 's': ['h', 2], 't': ['l'], 'u': ['n'], 'v': ['e'], 'w': ['f'], 'x': ['o'], 'y': ['p', 3], 'z': ['u']}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'5n22k mkkt jhbnrv1kv jvt wn2ckzn b1'"
+       "'jrkkt 4tt1 cqlrivttv cv1 frkxt6r lt'"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
      "output_type": "stream",
      "text": [
       "good afternoon today we will show\n",
-      "e22b rndwq0f2k d2brj gw gloo mxfg\n"
+      "veed r3x90qeeq 2ed7o at aucc ikea\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
    ],
    "source": [
     "#hidden_sequence = \"Hello how are you doing\"\n",
-    "hidden_sequence = \"hello banana xilophone key queue zebra cock pussy tits dandy fart though jolly world mum today I was going through the park and noticed that some people where looking at me in a weird way and thought that I was being silly\"\n",
+    "hidden_sequence = \"hello banana xilophone key queue dandy fart though jolly world mum today I was going through the park and noticed that some people where looking at me in a weird way and thought that I was being silly\"\n",
     "\n",
     "preprocessor = TextPreProcessor()\n",
     "hidden_sequence = preprocessor.lower(text=hidden_sequence)\n",
@@ -678,6 +678,122 @@
    "source": [
     "print(\"True sequence:\\n\", hidden_sequence)\n",
     "print(\"Reconstruction using Viterbi:\\n\", viterbi_reconstruction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocess = TextPreProcessor()\n",
+    "def prepare_subtexts(path_to_file, lengths):\n",
+    "    \"\"\"\n",
+    "    This function returns the subtext to use to assess accuracy in decryption\n",
+    "\n",
+    "    Input:\n",
+    "        - path_to_file (str) giving the path to the text file\n",
+    "        - lengths (list of int) giving the text lengths to consider\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(path_to_file, \"r\") as input_file:\n",
+    "        full_text = input_file.read()\n",
+    "\n",
+    "    full_text = preprocess.lower(full_text)\n",
+    "    unknown_chars = preprocess.unknown_chars(full_text)\n",
+    "    full_text = preprocess.remove_unknown_chars(full_text, unknown_chars=unknown_chars)\n",
+    "    full_text = preprocess.remove_additional_spaces(full_text)\n",
+    "\n",
+    "    subtexts = [\n",
+    "        \" \".join(full_text.split()[: lengths[i]]) for i in range(len(lengths))\n",
+    "    ]  # Contains the ones for the varying lengths\n",
+    "\n",
+    "    return subtexts\n",
+    "\n",
+    "# Use it on the war message text\n",
+    "lengths = [100]\n",
+    "subtext = prepare_subtexts(\"texts/eisenhower_speech.txt\", lengths)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "twntqw nz lwjewhf w3hn9w k qkf25f0 lkj xkdw emaj xnhf5fy nf emw unkje nz 6hkf4w c8 ehnn9j nz emw kqqaw2 wo9w2aeanfkh8 6nhuw em5j qkfd5fy aj 9khe n6 emw 4nf4whewd bf5ewd fkeanfj tqkf znh emw qacwhke5nf n6 w3hntw xk2w af unfsbfueanf l5em n3h yhwke hbjj5kf kqqawj 5 mkrw emaj xwjjkyw znh kqq nz inb kqemnbym emw 5faeakq kjjk3qe xki fne mkrw cwwf xkdw 5f 8nbh nlf unbfeh8 emw mnbh n6 in3h qacwhkeanf aj k99hnk4m5fy kqq tkehanej xwf kfd lnxwf 8nbf0 kf2 nq2 mkrw k tkhe en tqk8 5f emw kumawrwxwfe n6 6afkq ra4enh8 en xwxcwhj nz hwj5jekf4w xnrwxwfej a jk8 6nqqnl\n"
+     ]
+    }
+   ],
+   "source": [
+    "cipher = Homophonic_Cipher_Generator()\n",
+    "encoded_text = Encode_using_homophonic(subtext, cipher)\n",
+    "print(encoded_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2450/845287397.py:19: RuntimeWarning: divide by zero encountered in log\n",
+      "  tmp[k] = np.log(pi[k]) + np.log(B[k, observed[0]])\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2450/845287397.py:28: RuntimeWarning: divide by zero encountered in log\n",
+      "  tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'pexple of western qurope a landing was mave this morning on the coust of france by troous of the allied expedithonary force this landing is part of the concerted united mathons plan for the liverathon of qurope mave in conqunckion with our great busshan allies i have this message for all of you although the inithal assauld may not have been mave in your own country the hour of your liverathon is approuching all pathiots men and women young and old have a part to play in the achievement of final wictory to members of resistance movements i say follow'"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping = {'a': 0, 'b': 1, 'c': 2, 'd': 3, 'e': 4, 'f': 5, 'g': 6, 'h': 7, 'i': 8, 'j': 9,\n",
+    "    'k': 10, 'l': 11, 'm': 12, 'n': 13, 'o': 14, 'p': 15, 'q': 16, 'r': 17, 's': 18,\n",
+    "    't': 19, 'u': 20, 'v': 21, 'w': 22, 'x': 23, 'y': 24, 'z': 25,\n",
+    "    '0': 26, '1': 27, '2': 28, '3': 29, '4': 30, '5': 31, '6': 32, '7': 33, '8': 34,\n",
+    "    '9': 35, ' ': 36}\n",
+    "    \n",
+    "hidden_ = string_to_numbers_updated(encoded_text, mapping = mapping)\n",
+    "#print(hidden_)\n",
+    "\n",
+    "observed_ = string_to_numbers_updated(subtext, mapping)\n",
+    "#print(observed_)\n",
+    "\n",
+    "\n",
+    "    ######################################################### HMM #########################################################\n",
+    "B_start = np.zeros((27, 37)) + 1 / 36\n",
+    "B_start[:, -1] = np.zeros(27) # last column\n",
+    "B_start[-1, :] = np.zeros(37) # last row\n",
+    "B_start[-1, -1] = 1           # last entr\n",
+    "emission = Baum_Welch(\n",
+    "        A=p.normalized_matrix,\n",
+    "        B_start=B_start,\n",
+    "        pi=p.normalized_matrix[-1, :],\n",
+    "        observed=observed_)\n",
+    "\n",
+    "        # Now we use Viterbi to obtain the most likely one\n",
+    "f0, f = compute_f_log(\n",
+    "    A=p.normalized_matrix, B=emission, observed=observed_\n",
+    ")\n",
+    "pmax, phi = Viterbi_log(f0, f)\n",
+    "reconstruction = reconstruct(pmax, phi)\n",
+    "reconstruction = reconstruction.astype(int)\n",
+    "viterbi_reconstruction = convert_numbers_to_letters(reconstruction)\n",
+    "viterbi_reconstruction"
    ]
   }
  ],
